syntax = "proto3";
option java_multiple_files = true;
package com.item.management.client.service;


message CheckAvailableRequest {
    string firstName = 1;
    string lastName = 2;
}

message CheckAvailableRequestResponse {
    string greeting = 1;
}

service CheckAvailableService {
    rpc checkAR(CheckAvailableRequest) returns (CheckAvailableRequestResponse);
}